--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="number" id="phone" name="phone" required>
 
             <label for="confirmPassword">Address</label>
-            <input type="text" id="add" name="add" required>
+            <input type="text" id="add" name="address" required>
 
             <button type="submit" href="index.html">Register</button>
         </form>
