--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="password">Phone No.</label>
-            <input type="number" id="phone" name="phone" required>
+            <label for="phone">Phone No.</label>
+            <input type="text" id="phone" name="phone" pattern="[0-9]{10}" title="Please enter exactly 10 digits" required>
+
 
             <label for="confirmPassword">Address</label>
             <input type="text" id="add" name="address" required>
