--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <input type="email" id="email" name="email" required>
 
             <label for="phone">Phone No.</label>
-            <input type="text" id="phone" name="phone" pattern="[0-9]{10}" title="Please enter exactly 10 digits" required>
+            <input type="number" id="phone" name="phone" maxlength="10" title="Please enter exactly 10 digits" required>
 
 
-            <label for="confirmPassword">Address</label>
+            <label for="address">Address</label>
             <input type="text" id="add" name="address" required>
 
             <button type="submit" href="index.html">Register</button>
