--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <input type="email" id="email" name="email" required>
 
             <label for="phone">Phone No.</label>
-            <input type="number" id="phone" name="phone" maxlength="10" title="Please enter exactly 10 digits" required>
-
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" title="Please enter exactly 10 digits" required>
 
             <label for="address">Address</label>
             <input type="text" id="add" name="address" required>
