--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <label for="username">Full Name</label>
             <input type="text" id="username" name="username" required>
 
-            <label for="username">Department</label>
-            <input type="text" id="dept" name="dept" required>
+            <label for="department">Department</label>
+            <input type="text" id="dept" name="department" required>
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
