--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <label for="address">Address</label>
             <input type="text" id="add" name="address" required>
 
-            <button type="submit" href="index.html">Register</button>
+            <button type="submit" href="index.html">Submit</button>
         </form>
     </div>
 </body>
